plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.eeum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-mysql'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'com.redis:testcontainers-redis'
	testImplementation 'org.awaitility:awaitility'
	// Spring Boot BOM이 관리하지 않는 의존성이라 버전을 명시한다
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()

	// 통합 테스트마다 @DynamicPropertySource 설정이 달라 Spring 컨텍스트가 별도로 캐시된다.
	// Gradle 기본 힙(512m)으로는 전체 스위트 실행 중 OutOfMemoryError가 나고,
	// 그러면 이후 모든 @SpringBootTest가 컨텍스트 로딩 실패로 연쇄 실패한다.
	maxHeapSize = '2g'

	// ArchUnit 위반 목록은 예외 메시지 본문에만 담긴다 — full로 출력해야 어떤 클래스가 위반인지 보인다
	testLogging {
		events 'failed'
		exceptionFormat = 'full'
		showStackTraces = false
	}
}
